src/test/Properties4/Properties4.expected
error: Properties4.panda:6:15: incompatible return type: a method returning 'panda.core.Int32' may not override a method returning 'panda.core.String'
1 error
