src/test/Properties4/Properties4.panda
interface Intf {
    function prop():String
}

class Test (Intf) {
    property prop:Int
}